# human-predictive-ai-engine

./: .gitignore  README.md  TASKS.md  agent.py  pyproject.toml  requirements.txt  train.py
prototypes/: predictive_coding_basic.py  predictive_coding_v1.py
src/hpaie/: __init__.py
src/hpaie/agents/: __init__.py  active_inference_agent.py
src/hpaie/models/: __init__.py  predictive_coding.py
