[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpaie"
version = "0.1.0"
description = "Human Predictive AI Engine - Neuroscience-inspired hierarchical predictive coding with active inference"
authors = [
    { name = "K.K." }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "tqdm",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"